@@ -1,3 +1,12 @@
+2015-10-19 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCast.c:
+	* src/SDCCglue.c:
+	* src/SDCCglue.h:
+	  Eliminate redundant string literals to be generated.
+	* support/regression/tests/bug-2089.c:
+	  Add a new test case.
+
 2015-10-18 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/cpp/libcpp/*:
